--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -620,3 +620,72 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+/* New custom styles */
+body {
+  background-color: #1e1e1e;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+h1, h2, h3, h4, h5, p, a {
+  color: #fff;
+}
+
+.header-logo {
+  width: 80px;
+  height: auto;
+  float: left;
+}
+
+.clearDiv {
+  clear: both;
+}
+
+.branding {
+  font-family: "Imperator";
+  width: 300px;
+  float: left;  
+  text-transform: uppercase;
+
+}
+
+.tagline {
+  font-size: 14px;
+  color: grey;
+}
+
+.nav-menu a {
+  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 0.15em;
+  display: inline-block;
+  position: relative;
+  font-size: 12px;
+}
+.nav-menu a:after {    
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #44a8d8;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+.nav-menu a:hover:after { 
+  width: 100%; 
+  left: 0; 
+}
+
+.gatsby-image-wrapper img {
+  padding: 10px;
+}
+
+footer {
+  color: #fff;
+  text-align: center;
+}
+
+
