--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -624,10 +624,11 @@ pre tt:after {
 /* New custom styles */
 body {
   background-color: #1e1e1e;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Century Gothic', sans-serif;
 }
 h1, h2, h3, h4, h5, p, a {
   color: #fff;
+  font-family: 'Century Gothic', sans-serif;
 }
 
 .header-logo {
@@ -636,16 +637,29 @@ h1, h2, h3, h4, h5, p, a {
   float: left;
 }
 
+.signature {
+  height: 30px;
+  margin-bottom: 0;
+}
+
 .clearDiv {
   clear: both;
 }
 
 .branding {
-  font-family: "Imperator";
   width: 300px;
   float: left;  
   text-transform: uppercase;
 
+}
+
+.branding h3 {
+  font-family: "Imperator";
+}
+
+.branding p {
+  font-family: "Imperator";
+  margin-bottom: 0;
 }
 
 .tagline {
@@ -661,6 +675,7 @@ h1, h2, h3, h4, h5, p, a {
   display: inline-block;
   position: relative;
   font-size: 12px;
+  font-family: 'Century Gothic';
 }
 .nav-menu a:after {    
   background: none repeat scroll 0 0 transparent;
@@ -683,9 +698,22 @@ h1, h2, h3, h4, h5, p, a {
   padding: 10px;
 }
 
+img {
+  -webkit-box-shadow: 0px 10px 40px 20px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0px 10px 40px 20px rgba(0,0,0,0.3);
+  box-shadow: 0px 10px 40px 20px rgba(0,0,0,0.3);
+}
+
 footer {
   color: #fff;
   text-align: center;
+  min-height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+footer p {
+  margin-top: 50px;
+}
 
