--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -704,6 +704,24 @@ main img {
   box-shadow: 0px 10px 40px 20px rgba(0,0,0,0.3);
 }
 
+.regular-text {
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: .14em;
+}
+
+.image-grid-item {
+  width: calc( 33% - 30px );
+  height: 300px;
+  float: left;
+  margin: 10px;
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 10px;
+  box-shadow: 0px 10px 40px 20px rgba(0,0,0,0.3);
+  object-fit: cover;
+}
+
 footer {
   color: #fff;
   text-align: center;
