--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -623,7 +623,7 @@ pre tt:after {
 
 /* New custom styles */
 body {
-  background-color: #1e1e1e;
+  background-color: #1e1e1e !important;
   font-family: 'Century Gothic', sans-serif;
 }
 h1, h2, h3, h4, h5, p, a {
@@ -725,7 +725,7 @@ main img {
 }
 
 .image-grid-item {
-  width: calc( 33% - 30px );
+  width: calc( 33% - 20px );
   height: 300px;
   float: left;
   margin: 10px;
@@ -734,6 +734,19 @@ main img {
   margin-bottom: 10px;
   box-shadow: 0px 10px 40px 20px rgba(0,0,0,0.3);
   object-fit: cover;
+}
+
+.wpcf7-form-control.wpcf7-submit {
+  background-color: #1e1e1e;
+  padding: 10px 20px 10px 20px;
+  border: 2px solid #fff;
+  color: #fff;
+  border-radius: 3px;
+}
+
+.wpcf7-form-control.wpcf7-submit:hover {
+  color: #1e1e1e;
+  background-color: #fff;
 }
 
 footer {
@@ -750,7 +763,41 @@ footer p {
 }
 
 footer a {
-  margin-left: 5px;
-  margin-right: 5px;
+  color: white;
+}
+
+footer a:hover {
+  color: white;
+}
+
+@media screen and (max-width: 900px) {
+  .image-grid-item {
+    width: calc( 50% - 20px );
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .image-grid-item {
+    width: calc( 100% - 20px );;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .nav-menu {
+    display: block !important;
+  }
+
+  .nav-menu li {
+    padding: 15px;
+  }
+
+}
+
+.navbar-dark {
+  background-color: #1e1e1e !important;
+}
+
+.navbar-dark .navbar-toggler {
+  border: none;
 }
 
